--- a/public/css/style.css
+++ b/public/css/style.css
@@ -378,6 +378,72 @@ its the same what Marco put but only with a border radius tell me what you think
 /* Terms of service page end */
 
 
+/* Admin dashboard start */
+#admin_dashboard_items {
+    margin: 1rem 1rem 3rem 0.5rem;
+    background-color: #e2e2e2;
+    border-radius: 1%;
+    padding: 0.3rem;
+    width: 525px;
+    -webkit-box-shadow: 0px 0px 19px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 19px -1px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 19px -1px rgba(0,0,0,0.75);};
+
+/* Items */
+#admin_dashboard_items table {
+     border-collapse:separate;
+ }
+
+
+#admin_dashboard_items td {
+    padding-right:40px;
+}
+
+
+#admin_dashboard_items th {
+    padding-right: 40px;
+}
+#admin_dashboard_items img {
+    margin: 0.1rem;
+}
+/* Items end */
+
+#admin_dashboard_buttons {
+    margin-bottom: 0.5rem;
+}
+#admin_dashboard_buttons_users {
+    margin: 1rem ;
+}
+
+/*Users*/
+
+#admin_dashboard_users {
+    margin: 1rem 1rem 3rem 0.5rem;
+    background-color: #e2e2e2;
+    border-radius: 1%;
+    padding: 0.3rem;
+    width: 525px;
+    -webkit-box-shadow: 0px 0px 19px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 19px -1px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 19px -1px rgba(0,0,0,0.75);}
+
+#admin_dashboard_users th {
+    padding-right: 67px;
+
+}
+#admin_dashboard_users td {
+    padding-right: 45px;
+
+}
+#admin_dashboard_users table {
+    border-collapse:separate;
+
+}
+
+
+/*Users end*/
+
+/* Admin dashboard end */
 
 /* Tablet */
 @media screen and (min-width:800px) {
@@ -494,6 +560,9 @@ its the same what Marco put but only with a border radius tell me what you think
         transform: translate(-50%, -50%) !important;
     }
 }
+
+
+
 
 
 
