Hotfix decapitalize templates folders

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
 </head>
 
 {% block topmenu %}
-    {% include 'Main/header.html.twig' %}
+    {% include 'main/header.html.twig' %}
 {% endblock %}
 
 <body>
@@ -54,7 +54,7 @@
 </body>
 
 {% block footer %}
-    {% include 'Main/footer.html.twig' %}
+    {% include 'main/footer.html.twig' %}
 {% endblock %}
 
 </html>
