--- a/public/css/style.css
+++ b/public/css/style.css
@@ -387,7 +387,7 @@ its the same what Marco put but only with a border radius tell me what you think
     width: 525px;
     -webkit-box-shadow: 0px 0px 19px -1px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 19px -1px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 19px -1px rgba(0,0,0,0.75);};
+    box-shadow: 0px 0px 19px -1px rgba(0,0,0,0.75);}
 
 /* Items */
 #admin_dashboard_items table {
@@ -444,6 +444,10 @@ its the same what Marco put but only with a border radius tell me what you think
 }
 #admin_dashboard_users thead {
     width: 545px;
+}
+table caption {
+    font-size: 35px;
+    text-align: center;
 }
 
 /*Users end*/
@@ -570,7 +574,7 @@ its the same what Marco put but only with a border radius tell me what you think
     }
 
     .col {
-        margin-top: 4rem;
+        margin-top: 6rem;
     }
     .about_info{
         text-align: center;
@@ -581,16 +585,18 @@ its the same what Marco put but only with a border radius tell me what you think
         max-width: 550px;
     }
     .about_info h2 {
-        font-size: 60px;
+        font-size: 70px;
 
     }
     .about_info h2 span {
         color: #5ff03f;
         font-weight: bold;
-        font-size: 60px;
+        font-size: 70px;
 
     }
-
+    .about_info p {
+        font-size: 25px;
+    }
     /* Apolline`s modal to be applied differently on each platform */
     .modal-dialog {
         position: absolute;
@@ -602,15 +608,21 @@ its the same what Marco put but only with a border radius tell me what you think
     #admin_dashboards {
         display: flex;
         flex-direction:row ;
-        width: 1920px;
+        width: 1700px;
+        margin-top: 0.1rem;
     }
     #App {
         min-height: initial;
         max-width: none;
     }
-    #admin_dashboard_items h1 {
-        
+    #admin_dashboard_items {
+        margin: auto;
     }
+    #admin_dashboard_users {
+        margin: 0rem auto auto 1rem;
+
+    }
+
 }
 
 
