--- a/templates/Main/index.html.twig
+++ b/templates/Main/index.html.twig
@@ -4,32 +4,31 @@
 
 {% block body %}
     <main>
-
         <div class="container-fluid justify-content-center">
             <div class="d-flex justify-content-center flex-wrap ">
                 {% for item in items %}
-                    {% for picture in pictures %}
-                        {% if picture.item.id  == item.getId() %}
-                            <div class="col">
-                                <div class="card" style="width: 17rem;">
-                                    {#  TODO: Remove the width of the image, use CSS - Adolfo #}
-                                    <img class="card-img-top"
-                                         src="{{ path('get_picture_content', {'picture': picture.getId()}) }}"
-                                         alt="{{ item.title }}" width="250px">
-                                    <div class="card-body">
-                                        <div class="card_category_free">Free</div>
-                                        <h5 class="card-title">{{ item.title }}</h5>
-                                        <div id="butons">
-                                            <a href="{{ path('item_report', {'id': item.getId()}) }}"
-                                               class="btn btn-danger"><i class="fab fa-font-awesome-flag"></i></a>
-                                            <a href="{{ path('item_details', {'id': item.getId()}) }}"
-                                               class="btn btn-info"><i class="fas fa-info"></i></a>
-                                        </div>
-                                    </div>
+                    <div class="col">
+                        <div class="card" style="width: 17rem;">
+                            {#  TODO: Remove the width of the image, use CSS - Adolfo #}
+                            {% for picture in pictures %}
+                                {% if picture.item.id  == item.getId() %}
+                                    {#                                    <img class="card-img-top"#}
+                                    {#                                         src="{{ path('get_picture_content', {'picture': picture.getId()}) }}"#}
+                                    {#                                         alt="{{ item.title }}" width="250px">#}
+                                {% endif %}
+                            {% endfor %}
+                            <div class="card-body">
+                                <div class="card_category_free">Free</div>
+                                <h5 class="card-title">{{ item.title }}</h5>
+                                <div id="butons">
+                                    <a href="{{ path('item_report', {'id': item.getId()}) }}"
+                                       class="btn btn-danger"><i class="fab fa-font-awesome-flag"></i></a>
+                                    <a href="{{ path('item_details', {'id': item.getId()}) }}"
+                                       class="btn btn-info"><i class="fas fa-info"></i></a>
                                 </div>
                             </div>
-                        {% endif %}
-                    {% endfor %}
+                        </div>
+                    </div>
                 {% endfor %}
             </div>
         </div>
