--- a/templates/Main/index.html.twig
+++ b/templates/Main/index.html.twig
@@ -16,16 +16,16 @@
         </div>
         <div class="container-fluid justify-content-center">
             <div class="d-flex justify-content-center flex-wrap ">
-                {% for item in items %}
-                    {% for picture in pictures %}
-                        {% if picture.item.id  == item.getId() %}
+                {% for item in items | reverse %}
+                    {% for picture in pictures |reverse %}
+                        {% if picture.item.id  == item.getId()%}
                             <div class="col">
                                 <div class="card" style="width: 17rem;">
                                     {#  TODO: Remove the width of the image, use CSS - Adolfo #}
                                     <img class="card-img-top" src="{{ path('get_picture_content', {'picture': picture.getId()}) }}"
                                          alt="{{ item.title }}" width="250px">
                                     <div class="card-body">
-                                        <h5 class="card-title">{{ item.title }}</h5>
+                                        <h4 class="card-title">{{ item.title }} - {{ item.conditionStatus }}</h4>
                                         <div id="butons">
                                             <a href="{{ path('item_report', {'id': item.getId()}) }}"
                                                class="btn btn-danger"><i class="fab fa-font-awesome-flag"></i></a>
