--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -63,29 +63,37 @@
                     available items they can swap with.
                 </p>
             </div>
+            <div>
+                <div class="count my-1">
+                    {{ 'HOME.ITEM_COUNT'|trans }} {{ items.getTotalItemCount }}
+                </div>
+
+                {# display navigation #}
+                <div class="navigation">
+                    {{ knp_pagination_render(items) }}
+                </div>
+            </div>
+
             <div class="container-fluid justify-content-center">
                 <div class="d-flex justify-content-center flex-wrap ">
                     {% for item in items %}
-                        {% for picture in pictures %}
-                            {% if picture.item.id  == item.getId() %}
-                                <div class="col">
-                                    <div class="card" style="width: 17rem;">
-                                        <img class="card-img-top"
-                                             src="{{ path('get_picture_content', {'picture': picture.getId()}) }}"
-                                             alt="{{ item.title }}" width="250px">
-                                        <div class="card-body">
-                                            <h5 class="card-title">{{ item.title }}</h5>
-                                            <div id="butons">
-                                                <a href="{{ path('item_report', {'id': item.getId()}) }}"
-                                                   class="btn btn-danger"><i class="fab fa-font-awesome-flag"></i></a>
-                                                <a href="{{ path('item_details', {'id': item.getId()}) }}"
-                                                   class="btn btn-info"><i class="fas fa-info"></i></a>
-                                            </div>
-                                        </div>
+                        <div class="col">
+                            <div class="card" style="width: 17rem;">
+                                {#  TODO: Remove the width of the image, use CSS - Adolfo #}
+                                <img class="card-img-top"
+                                     src="{{ path('get_picture_content', {'picture': item.getPictures()|first.getId()}) }}"
+                                     alt="{{ item.title }}" width="250px">
+                                <div class="card-body">
+                                    <h5 class="card-title">{{ item.title }}</h5>
+                                    <div id="butons">
+                                        <a href="{{ path('item_report', {'id': item.getId()}) }}"
+                                           class="btn btn-danger"><i class="fab fa-font-awesome-flag"></i></a>
+                                        <a href="{{ path('item_details', {'id': item.getId()}) }}"
+                                           class="btn btn-info"><i class="fas fa-info"></i></a>
                                     </div>
                                 </div>
-                            {% endif %}
-                        {% endfor %}
+                            </div>
+                        </div>
                     {% endfor %}
                 </div>
             </div>
