--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
 </head>
 
 {% block topmenu %}
-    {% include 'main/header.html.twig' %}
+    {% include 'main/navbar.html.twig' %}
 {% endblock %}
 
 <body>
