LëtzSwap! title fix

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -6,12 +6,13 @@
     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
         <main>
             <div id="elevator_pitch">
-                <h1>Welcome back to <span>LëtzSwap</span></h1>
+                <h1>Welcome back to <span>{{ 'APP.TITLE' | trans }}</span></h1>
                 <h2 id="username">{{ app.user.username }}   </h2>
-                <p> - LëtzSwap website – What is it and how does it work?
-                    LetzSwap is a peer to peer platform which facilitates fast swapping of goods in Luxembourg. Users
-                    can
-                    post photos and descriptions of their items in under one minute and they can easily scroll through
+                <p> What is it and how does it work?
+                    {{ 'APP.TITLE' | trans }} is a peer to peer platform which facilitates fast swapping of goods in
+                    Luxembourg. Users
+                    can post photos and descriptions of their items in under one minute and they can easily scroll
+                    through
                     available items they can swap with.
                 </p>
             </div>
@@ -55,8 +56,8 @@
     {% else %}
         <main>
             <div id="elevator_pitch">
-                <h1>Welcome to <span>LëtzSwap</span></h1>
-                <p> - LëtzSwap website – What is it and how does it work?
+                <h1>Welcome to <span>{{ 'APP.TITLE' | trans }}</span></h1>
+                <p> - {{ 'APP.TITLE' | trans }} website – What is it and how does it work?
                     LetzSwap is a peer to peer platform which facilitates fast swapping of goods in Luxembourg. Users
                     can
                     post photos and descriptions of their items in under one minute and they can easily scroll through
