--- a/templates/main/navbar.html.twig
+++ b/templates/main/navbar.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar">
     <div id="logo">
-        <a href="{{ path('homepage') }}"><h2>LëtzSwap</h2></a>
+        <a href="{{ path('homepage') }}"><h2>{{ 'APP.TITLE' | trans }}</h2></a>
     </div>
     <ul class="navbar_list">
 
