creation header with tagline

--- a/templates/main/header.html.twig
+++ b/templates/main/header.html.twig
@@ -1,3 +1,17 @@
 <div>
     {% include 'main/navbar.html.twig' %}
 </div>
+
+{% block topmenu %}
+    <div id="elevator_pitch">
+        <h2>Welcome back to Letzswap!</h2>
+
+        <p > This platform is the <span>simplest way</span>
+            to extend the life of your goods
+            <br>
+            by giving them a new owner.
+            <br> Swish <span>locally</span>, exchange <span>on your own terms</span>, swap <span>easily</span>!
+        </p>
+    </div>
+
+{% endblock %}
