--- a/templates/Item/details.html.twig
+++ b/templates/Item/details.html.twig
@@ -8,7 +8,7 @@
     <h2>{{ username }}</h2>
     </div>
     <article id="description">
-    <img src="{{ path('get_picture_content', {'picture': picture.getId()}) }}" class="img-thumbnail" width="500px" height="200px">
+    <img src="{{ path('get_picture_content', {'picture': picture.getId()}) }}" class="img-fluid" width="500px" height="200px">
 
     <table class="table">
         <tbody>
