--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -8,10 +8,8 @@
         <div id="elevator_pitch">
             <h1>Welcome back to <span>LëtzSwap</span></h1>
             <h2 id="username">{{ app.user.username }}   </h2>
-            <p > - LëtzSwap website – What is it and how does it work?
-                LetzSwap is a peer to peer platform which facilitates fast swapping of goods in Luxembourg. Users can
-                post photos and descriptions of their items in under one minute and they can easily scroll through
-                available items they can swap with.
+            <p > Letzswap is the simplest way to extend the life of your goods
+                by giving them a new owner. Swish locally, exchange on your own terms, swap easily!
                 </p>
         </div>
         <div class="container-fluid justify-content-center">
@@ -46,10 +44,8 @@
     <main>
         <div id="elevator_pitch">
             <h1>Welcome to <span>LëtzSwap</span></h1>
-            <p > - LëtzSwap website – What is it and how does it work?
-                LetzSwap is a peer to peer platform which facilitates fast swapping of goods in Luxembourg. Users can
-                post photos and descriptions of their items in under one minute and they can easily scroll through
-                available items they can swap with.
+            <p > Letzswap is the simplest way to extend the life of your goods
+                by giving them a new owner. Swish locally, exchange on your own terms, swap easily!
             </p>
         </div>
         <div class="container-fluid justify-content-center">
