--- a/templates/mail/swap/swap-mail.html.twig
+++ b/templates/mail/swap/swap-mail.html.twig
@@ -15,6 +15,8 @@
     The trans() function passes parameters gotten from User and Item entities to be inserted inside
     the text in messages.[twol etter code here].yaml</p>
 
+<p>{{ text }}</p>
+
 
 </body>
 </html>
