--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -87,12 +87,15 @@
                                      alt="{{ item.title }}" width="250px">
                                 <div class="card-body">
                                     <h5 class="card-title">{{ item.title }}</h5>
-                                    <div id="butons">
-                                        <a href="{{ path('item_report', {'id': item.getId()}) }}"
-                                           class="btn btn-danger"><i class="fab fa-font-awesome-flag"></i></a>
+                                    {% if is_granted('ROLE_USER') %}
+                                        <div id="butons">
+                                            <a href="{{ path('item_report', {'id': item.getId()}) }}"
+                                               class="btn btn-danger"><i class="fab fa-font-awesome-flag"></i></a>
+                                        </div>
+                                    {% else %}
                                         <a href="{{ path('item_details', {'id': item.getId()}) }}"
                                            class="btn btn-info"><i class="fas fa-info"></i></a>
-                                    </div>
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
