--- a/templates/main/navbar.html.twig
+++ b/templates/main/navbar.html.twig
@@ -4,21 +4,22 @@
     </div>
     <ul class="navbar_list">
 
-        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-            {% if is_granted('ROLE_ADMIN') %}
-                <li class="{% if app.request.attributes.get('_route') == 'admin' %} active {% endif %}">
-                    <a class="button navbar_link" href="{{ path('admin') }}">
-                        {{ 'NAV.ADMIN'|trans }}
-                    </a>
-                </li>
-            {% endif %}
+
+        {% if is_granted('ROLE_ADMIN') %}
+            <li class="{% if app.request.attributes.get('_route') == 'admin' %} active {% endif %}">
+                <a class="button navbar_link" href="{{ path('admin') }}">
+                    {{ 'NAV.ADMIN'|trans }}
+                </a>
+            </li>
+        {% endif %}
+        {% if is_granted('ROLE_USER') %}
             <li class="{% if app.request.attributes.get('_route') == 'add_item' %} active {% endif %}">
                 <a class="button navbar_link" href="{{ path('item_new') }}">
                     {{ 'NAV.ADD_ITEM'|trans }}
                 </a>
             </li>
 
-            <li class="">
+            <li>
                 <a class="button navbar_link" href="{{ path('app_logout') }}">
                     {{ 'NAV.LOGOUT'|trans }}
                 </a>
