--- a/templates/item/details.html.twig
+++ b/templates/item/details.html.twig
@@ -8,7 +8,8 @@
         <h2>{{ username }}</h2>
     </div>
     <article id="description">
-    <img src="{{ path('get_picture_content', {'picture': picture.getId()}) }}" class="img-fluid" width="500px" height="200px">
+        <img src="{{ path('get_picture_content', {'picture': picture.getId()}) }}" class="img-fluid" width="500px"
+             height="200px">
 
         <table class="table">
             <tbody>
@@ -20,10 +21,12 @@
                 <th style="color: #46a18e">Condition Status:</th>
                 <td>{{ item.conditionStatus }}</td>
             </tr>
-            <tr>
-                <th style="color: #46a18e">Description:</th>
-                <td>{{ item.description }}</td>
-            </tr>
+            {% if item.description %}
+                <tr>
+                    <th style="color: #46a18e">Description:</th>
+                    <td>{{ item.description }}</td>
+                </tr>
+            {% endif %}
             </tbody>
         </table>
     </article>
@@ -43,8 +46,8 @@
                 <button id="swap_button" type="button" class="btn btn-primary">LetzSwap!</button>
             </a>
 
-            <a href="{{ path('item_report', {'id': item.id}) }}">
-                <button type="button" class="btn btn-danger" >Report</button>
+            <a href="{#{ path('item_report', {'id': item.id}) }#}">
+                <button id="report_button" type="button" class="btn btn-danger">Report</button>
             </a>
 
         {% endif %}
@@ -57,17 +60,41 @@
             {{ form(swapForm) }}
         </div>
 
+        <div id="report_form" style="display:none">
+            {#{ form(swapForm, {'action': path('item_swap', {'id': item.id})}) }#}
+            {{ form(reportForm) }}
+        </div>
+
     </div>
     <script>
-        document.getElementById("swap_button").addEventListener("click", function(event){
+        document.getElementById("swap_button").addEventListener("click", function (event) {
             event.preventDefault();
             showHideSwapForm();
         });
 
+        document.getElementById("report_button").addEventListener("click", function (event) {
+            event.preventDefault();
+            showHideReportForm();
+        });
+
         function showHideSwapForm() {
-            document.getElementById("swap_form").style.display === "none"
-            ? document.getElementById("swap_form").style.display = "block"
-            : document.getElementById("swap_form").style.display = "none";
+            if (document.getElementById("swap_form").style.display === "none") {
+                document.getElementById("report_form").style.display = "none";
+                document.getElementById("swap_form").style.display = "block";
+            } else {
+                document.getElementById("swap_form").style.display = "none";
+            }
+
+
+        }
+
+        function showHideReportForm() {
+            if (document.getElementById("report_form").style.display === "none") {
+                document.getElementById("swap_form").style.display = "none";
+                document.getElementById("report_form").style.display = "block";
+            } else {
+                document.getElementById("report_form").style.display = "none";
+            }
 
         }
     </script>
